@@ -495,8 +495,6 @@ struct
      "%s() failed to parse line node, assuming %d bytes\n'%s'\n", 0 },
   { W_FLEXARRAY_INSTRUCT, ERROR_LEVEL_WARNING,
      "type of variable '%s' is struct with flexible array field", 0},
-  { W_ANONYMOUS_MEMBER, ERROR_LEVEL_WARNING,
-     "anonymous member in struct/union", 0},
   { W_INLINE_NAKED, ERROR_LEVEL_WARNING,
      "inline function '%s' is __naked", 0},
   { E_Z88DK_FASTCALL_PARAMETERS, ERROR_LEVEL_ERROR,
